--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -1236,30 +1236,41 @@ background:rgb(115, 233, 162);
 	width: 90%;
 }
 
+#detailsNotesContainer {
+  float: right;
+  vertical-align: top;
+  width: 47%;
+  margin-right: 2%;
+  /*height: 200px;
+  border-radius: 6px;
+  background: rgba(250, 250, 250, 0.8);
+  border: 1px solid rgb(234, 230, 215);*/
+}
+
 #detailsEventBlockList {
-	text-align: center;
-	padding-bottom: 20px;
-	background: rgb(226, 221, 202);
+	/*text-align: center;
+	padding-bottom: 20px;*/
+	/*background: rgb(226, 221, 202);*/
 	overflow: hidden;
-	border-top: none;
+	/*border-top: none;
 	border-left: 2px solid rgb(194, 189, 167);
 	border-right: 1px solid rgb(249, 249, 249);
 	border-bottom: 2px solid rgb(249, 249, 249);
 	border-bottom-left-radius: 6px;
-	border-bottom-right-radius: 6px;
+	border-bottom-right-radius: 6px;*/
 }
 
 #calendarDayDetailsTable {
 	position: relative;
 	padding: 0px 2%;
-	background: rgb(226, 221, 202);
+	/*background: rgb(226, 221, 202);*/
 	padding-bottom: 20px;
-	border-top: 2px solid rgb(194, 189, 167);
+	/*border-top: 2px solid rgb(194, 189, 167);
 	border-left: 2px solid rgb(194, 189, 167);
 	border-right: 1px solid rgb(249, 249, 249);
 	border-bottom: none;
 	border-top-left-radius: 6px;
-	border-top-right-radius: 6px;
+	border-top-right-radius: 6px;*/
 }
 
 	#calendarDayDetailsTable .table-details-head {
@@ -1675,7 +1686,7 @@ legend {
 }
 
 .details-event-block-info-body {
-	color:rgb(250, 250, 250);
+	color: rgb(250, 250, 250);
 }
 
 
@@ -1687,9 +1698,8 @@ legend {
 }
 
 .details-event-block-info-footer {
-border-bottom:1px solid rgb(234, 230, 215);
-margin-bottom:10px;
-overflow:hidden;
+	margin-bottom: 10px;
+	overflow: hidden;
 }
 
 .event-block-container {
@@ -1721,12 +1731,15 @@ overflow:hidden;
 }
 
 .details-event-block-container {
-	text-align:left;
-	padding:0 20px;
+	text-align: left;
+	padding: 0 20px;
+	border-radius: 6px;
+	background: rgb(225, 220, 200);
+	border: 1px solid rgb(244, 241, 231);
 }
 
 .details-event-block {
-margin-top:20px;
+	margin-top: 20px;
 }
 
 .details-event-block-body {
@@ -1734,8 +1747,8 @@ margin-top:20px;
 }
 
 .details-event-block-label {
-display:inline-block;
-width:80px;
+	display: inline-block;
+	width: 80px;
 }
 
 .event-block {
@@ -1845,5 +1858,5 @@ width:80px;
 
 .details-event-block-info-addedby {
 	text-align: left;
-	color:rgb(87, 80, 64);
+	color: rgb(87, 80, 64);
 }
