--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -435,7 +435,6 @@ header, footer, nav, section, div {
 #detailsMenuHeader {
 	position: relative;
 	top: 20px;
-	margin-bottom: 20px;
 }
 
 #loginPageContainer fieldset {
@@ -1236,41 +1235,57 @@ background:rgb(115, 233, 162);
 	width: 90%;
 }
 
-#detailsNotesContainer {
-  float: right;
-  vertical-align: top;
-  width: 47%;
-  margin-right: 2%;
-  /*height: 200px;
-  border-radius: 6px;
-  background: rgba(250, 250, 250, 0.8);
-  border: 1px solid rgb(234, 230, 215);*/
+#notesContainer {
+	float: right;
+	vertical-align: top;
+	width: 47%;
+	margin-right: 2%;
 }
 
-#detailsEventBlockList {
-	/*text-align: center;
-	padding-bottom: 20px;*/
-	/*background: rgb(226, 221, 202);*/
+.notes-shadow-box {
+	position: relative;
+	background: rgb(250, 250, 250);
+	border-radius: 4px;
+	padding: 2em 1.5em;
+	color: rgba(0,0,0, .8);
+}
+
+	.notes-shadow-box::before, .notes-shadow-box::after {
+		z-index: -1;
+		position: absolute;
+		content: "";
+		bottom: 15px;
+		left: 10px;
+		width: 50%;
+		top: 80%;
+		max-width: 300px;
+		background: rgb(184, 168, 137);
+		box-shadow: 0 15px 10px rgb(184, 168, 137);
+		transform: rotate(-3deg);
+	}
+
+	.notes-shadow-box::after {
+		transform: rotate(3deg);
+		right: 10px;
+		left: auto;
+	}
+
+#detailsEventsAndNotesContainer {
 	overflow: hidden;
-	/*border-top: none;
-	border-left: 2px solid rgb(194, 189, 167);
-	border-right: 1px solid rgb(249, 249, 249);
-	border-bottom: 2px solid rgb(249, 249, 249);
-	border-bottom-left-radius: 6px;
-	border-bottom-right-radius: 6px;*/
+	padding-bottom: 40px;
+}
+
+.close-btn-x {
+	float: right;
+	color: rgb(223, 215, 188);
+	padding: 0 10px;
 }
 
 #calendarDayDetailsTable {
 	position: relative;
 	padding: 0px 2%;
-	/*background: rgb(226, 221, 202);*/
 	padding-bottom: 20px;
-	/*border-top: 2px solid rgb(194, 189, 167);
-	border-left: 2px solid rgb(194, 189, 167);
-	border-right: 1px solid rgb(249, 249, 249);
-	border-bottom: none;
-	border-top-left-radius: 6px;
-	border-top-right-radius: 6px;*/
+	/*background:rgb(214, 210, 193);*/
 }
 
 	#calendarDayDetailsTable .table-details-head {
@@ -1286,13 +1301,11 @@ background:rgb(115, 233, 162);
 		}
 
 	#calendarDayDetailsTable .table-details-body {
-		/*background: rgb(249, 248, 246);*/
-		background: rgb(161, 154, 139);
+		background: rgb(151, 148, 134);
 		padding-top: 4px;
 		padding-bottom: 4px;
 		padding-left: 1px;
-		border-radius: 6px;
-		border: 2px solid rgb(142, 135, 121);
+		border: 3px solid rgb(122, 115, 103);
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -1346,7 +1359,7 @@ background:rgb(115, 233, 162);
 
 .details-hour-line {
 	position: absolute;
-	background: rgb(187, 180, 164);
+	background: rgb(172, 170, 159);
 	height: 100%;
 	width: 1px;
 }
@@ -1734,8 +1747,42 @@ legend {
 	text-align: left;
 	padding: 0 20px;
 	border-radius: 6px;
-	background: rgb(225, 220, 200);
+	background: rgb(223, 215, 188);
 	border: 1px solid rgb(244, 241, 231);
+	position: relative;
+}
+
+.event-shadow-box {
+	position: relative;
+}
+
+	.event-shadow-box:before, .event-shadow-box:after {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		-webkit-box-shadow: 0 0 20px rgba(164, 147, 122, 1);
+		-moz-box-shadow: 0 0 20px rgba(164, 147, 122, 1);
+		box-shadow: 0 0 20px rgba(164, 147, 122, 1);
+		top: 10px;
+		bottom: 10px;
+		left: 0;
+		right: 0;
+		-moz-border-radius: 100px / 10px;
+		border-radius: 100px / 10px;
+	}
+
+	.event-shadow-box:after {
+		right: 10px;
+		left: auto;
+		-webkit-transform: skew(8deg) rotate(3deg);
+		-moz-transform: skew(8deg) rotate(3deg);
+		-ms-transform: skew(8deg) rotate(3deg);
+		-o-transform: skew(8deg) rotate(3deg);
+		transform: skew(8deg) rotate(3deg);
+	}
+
+#notesList li {
+	font-size: 1.6em;
 }
 
 .details-event-block {
