--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,6 +1,6 @@
 ﻿<div id="detailsPageAllEventsListContainer" class="display-events-overview-container">
 	<div class="display-events-overview-header">
-		Mój kalendarz
+		<span>Mój kalendarz</span><div class="close-btn-x hover-cursor-pointer" data-bind="click:$root.closeAllSelectedEventsListContainerOnClick">x</div>
 	</div>
 
 	<div style="padding: 10px;">
