--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventsAndNotesContainer.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventsAndNotesContainer.cshtml
@@ -1,9 +1,9 @@
 ﻿<div style="width: 47%; /*background: rgb(208, 202, 178); */ margin-left: 2%; display: inline-block; /*border-radius: 6px; border: 1px solid rgb(234, 230, 215); *">
-	<div style="font-size: 1.6em; color: rgb(171, 157, 138);">
+	<div style="font-size: 1.6em; color: rgb(171, 157, 138); border-bottom: 1px solid rgb(255, 255, 255); margin-bottom: 10px;">
 		Wydarzenia
 	</div>
 	<div data-bind="foreach: detailsPageDayEvents()">
-		<div class="details-event-block-container" data-bind="attr: { 'data-eventid': id }">
+		<div class="details-event-block-container event-shadow-box" data-bind="attr: { 'data-eventid': id }">
 			<div class="details-event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
 				<div class="event-kind-tag" style="float: right; text-align: center;" data-bind="style: { color: kind.headerColor }">
 					<span data-bind="text: kind.name"></span>
@@ -14,7 +14,6 @@
 				<div class="details-event-block-footer">
 				</div>
 			</div>
-
 			@Html.Partial( "_DetailsEventInfo" )
 		</div>
 	</div>
