--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
@@ -1,8 +1,26 @@
-﻿<div id="detailsNotesContainer">
-	<div style="font-size: 1.6em; color: rgb(171, 157, 138);">
-	Notatki
+﻿<div id="notesContainer">
+	<div style="font-size: 1.6em; color: rgb(171, 157, 138); border-bottom: 1px solid rgb(255, 255, 255); margin-bottom: 10px;">
+		Notatki
 	</div>
-	<div>
-		<textarea maxlength="1000" placeholder="Dodaj Notatke" style="width: 100%; height: 100px; padding: 10px; box-sizing: border-box; font-size: 16px; background: rgba(255,255,255,.8)"></textarea>
+	<div id="notes" class="notes-shadow-box" style="min-height: 200px;">
+		<div>
+			<textarea maxlength="1000" data-bind="value: $root.observableNote.data" placeholder="Dodaj Notatke" style="width: 100%; height: 100px; padding: 10px; box-sizing: border-box; font-size: 18px; background: transparent;"></textarea>
+		</div>
+		<div style="float: right;" id="btnAddNewNote" data-bind="click: $root.AddNoteOnClick" class="hover-cursor-pointer">
+			<span class="save-text">dodaj</span>
+		</div>
+		<div style="margin-top: 40px;">
+			<ul id="notesList" data-bind="foreach: $root.detailsPageDayNotes">
+				<li class="li-note-container" data-bind="attr: { 'data-noteid': id }">
+					<div class="note-content">
+						<pre data-bind="text: data" style="white-space: pre-wrap;"></pre>
+						<div style="font-size: 14px; text-align: right;">
+							<span class="link" style="color: rgb(68, 192, 64);" data-bind="click: function () { $root.editNoteDetailsPageOnEditLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }">edytuj</span>
+							<span data-bind="click: function () { $root.prepareDeleteNoteDetailsPageOnDeleteLinkClick( id, displayDate.year, displayDate.month, displayDate.day ) }" class="link" style="color: red;">usuń</span>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
