--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
@@ -19,7 +19,7 @@
 
 <script src="~/Scripts/JSViewModels/appViewModel.js"></script>
 <script src="~/Scripts/Helpers/EventColorHelper.js"></script>
-<script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
+<script src="~/Scripts/Helpers/TreeBuilder.js"></script>
 
 <link href="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.css" rel="stylesheet" />
 <script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.js"></script>
@@ -27,7 +27,7 @@
 <script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/boot.js"></script>
 
 <!-- include spec files here... -->
-<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/spec/EventTreeBuilderSpec.js"></script>
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/spec/TreeBuilderSpec.js"></script>
 
 
 
