--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -18,7 +18,6 @@
 		</div>
 	</div>
 
-
 	<div class="events-menu-container">
 	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 		<div class="border-item inne-border-tab"></div>
@@ -110,7 +109,7 @@
 
 <section id="calendarDayDetailsContainer">
 	<div id="calendarDayDetailsTable">
-		<div style="font-size: 3em; font-family: Raleway-Regular; text-align: center; border-bottom: 1px solid white; width: 50%; margin: 0 auto;">
+		<div style="font-size: 3em; font-family: Raleway-Regular; text-align: center; border-bottom: 1px solid rgb(251, 250, 247); width: 50%; margin: 0 auto;">
 			<span>
 				<span style="font-size: .5em; margin-left: 6px; color: rgb(171, 157, 138);">Grafik z dnia: </span>
 				<span data-bind="text: $root.detailsPageDisplayDate.day()" style="color: rgb(148, 147, 123);"></span>
