--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -78,6 +78,7 @@
 <script src="~/Scripts/JSModels/KKNoteModelObservable.js"></script>
 <script src="~/Scripts/JSModels/KKDateModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventDateModel.js"></script>
+<script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
 <script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
 <script src="~/Scripts/Helpers/EventColorHelper.js"></script>
