--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventsAndNotesContainer.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventsAndNotesContainer.cshtml
@@ -1,5 +1,5 @@
-﻿<div style="width: 47%; /*background: rgb(208, 202, 178); */ margin-left: 2%; display: inline-block; /*border-radius: 6px; border: 1px solid rgb(234, 230, 215); *">
-	<div style="font-size: 1.6em;padding:16px; color: rgb(171, 157, 138); border-bottom: 1px solid rgb(255, 255, 255); margin-bottom: 10px;">
+﻿<div style="width: 47%; margin-left: 3%; display: inline-block;">
+	<div style="font-size: 1.6em; padding: 16px; padding-bottom: 6px; color: rgb(171, 157, 138); border-bottom:2px solid rgb(245, 242, 231); margin-bottom: 20px;">
 		Wydarzenia
 	</div>
 	<div data-bind="foreach: detailsPageDayEvents()">
