--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsNotesSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="notesContainer">
-	<div style="font-size: 1.6em;padding:16px; color: rgb(171, 157, 138); border-bottom: 1px solid rgb(255, 255, 255); margin-bottom: 10px;">
+	<div style="font-size: 1.6em; padding: 16px; padding-bottom: 6px; color: rgb(171, 157, 138); border-bottom: 2px solid rgb(245, 242, 231); margin-bottom: 20px;">
 		Notatki
 	</div>
 	<div id="notes" class="notes-shadow-box" style="min-height: 200px;">
