--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -6,7 +6,7 @@
 body {
 	font-size: .85em;
 	line-height: 1.6;
-	font-family: "SegoeUI", Helvetica, Sans-Serif;
+	font-family: Raleway-Regular,"SegoeUI", Helvetica, Sans-Serif;
 	padding: 0px;
 	margin: 0px;
 	font-weight: 400;
@@ -534,7 +534,7 @@ header, footer, nav, section, div {
 #detailsPanel {
 	min-height: 500px;
 	padding-top: 20px;
-	border-top: 2px solid rgb(250, 248, 240);
+	border-top: 2px solid rgb(245, 242, 231);
 	border-left: 3px solid rgb(215, 208, 184);
 }
 
@@ -756,10 +756,10 @@ header, footer, nav, section, div {
 	top: 25px;
 	position: absolute;
 	z-index: 101;
-	width: 99%;
+	width: 80%;
 	display: none;
-	border:1px solid #5E5757;
-	left:1px;
+	/*border:1px solid #5E5757;*/
+	left: 10%;
 }
 
 .form-header {
@@ -801,7 +801,8 @@ header, footer, nav, section, div {
 .add-event-fieldset {
 	color: rgb(155, 155, 155);
 	border: none;
-	margin-left: 20px;
+	margin: 0 auto;
+	width: 400px;
 	padding-bottom: 20px;
 }
 
@@ -940,14 +941,16 @@ background:rgb(115, 233, 162);
 }
 
 .title-header {
-	text-align: center;
-	font-size: 1.6em;
-	color: rgb(245, 241, 224);
+	text-align: left;
+	font-size: 2em;
+	color: rgb(167, 164, 154);
 	padding: 10px;
+	top: 20px;
 	padding-bottom: 20px;
-	background: rgb(190, 182, 155);
+	position: relative;
+	/*background: rgb(190, 182, 155);
 	border-bottom: 2px solid rgb(174, 168, 144);
-	border-top: 2px solid rgb(174, 168, 144);
+	border-top: 2px solid rgb(174, 168, 144);*/
 }
 
 .selected-content-container {
@@ -986,17 +989,15 @@ background:rgb(115, 233, 162);
 #addPrivateEventBtn {
 	display: block;
 	padding-bottom: 20px;
-	margin-bottom: 0px;
-	border-bottom: 2px solid rgb(145, 141, 123);
 }
 
 #lobbyTableOfEventsSection {
 	display: block;
 	text-align: center;
 	border-top: 2px solid rgb(250, 248, 240);
-	border-bottom: 2px solid rgb(145, 141, 123);
 	padding-top: 4px;
 	padding-bottom: 10px;
+	border-right: 3px solid rgb(215, 208, 184);
 }
 
 #endDateValidationErrorMsg {
@@ -1064,11 +1065,11 @@ background:rgb(115, 233, 162);
 .note-content {
 	overflow: hidden;
 	border-bottom: 1px solid rgb(237, 233, 217);
-	list-style-position:inside;
+	list-style-position: inside;
 }
 
 .li-note-container {
-list-style-position:inside;
+	list-style-position: inside;
 }
 
 .link:hover {
@@ -1247,14 +1248,15 @@ list-style-position:inside;
 }
 
 #calendarDayDetailsContainer {
-	width: 90%;
+	border-left: 3px solid rgb(215, 208, 184);
+	border-top: 2px solid rgb(245, 242, 231);
 }
 
 #notesContainer {
 	float: right;
 	vertical-align: top;
 	width: 47%;
-	margin-right: 2%;
+	margin-right: 1%;
 }
 
 .notes-shadow-box {
@@ -1288,8 +1290,7 @@ list-style-position:inside;
 #detailsEventsAndNotesContainer {
 	overflow: hidden;
 	padding-bottom: 40px;
-	border-left:3px solid rgb(215, 208, 184);
-
+	width:90%;
 }
 
 .close-btn-x {
@@ -1302,9 +1303,9 @@ list-style-position:inside;
 	position: relative;
 	padding: 0px 2%;
 	padding-bottom: 20px;
-	padding-top:40px;
+	padding-top: 10px;
+	width:88%;
 	/*background:rgb(214, 210, 193);*/
-	border-left:3px solid rgb(215, 208, 184);
 }
 
 	#calendarDayDetailsTable .table-details-head {
@@ -1312,7 +1313,7 @@ list-style-position:inside;
 		text-align: left;
 		color: rgb(123, 118, 106);
 		padding-top: 20px;
-		font-size:18px;
+		font-size: 18px;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -1326,6 +1327,7 @@ list-style-position:inside;
 		padding-bottom: 4px;
 		padding-left: 1px;
 		border: 3px solid rgb(122, 115, 103);
+		border-bottom: 3px solid rgb(108, 102, 91);
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -1355,6 +1357,7 @@ list-style-position:inside;
 	border-top: 2px solid rgb(250, 248, 240);
 	padding-top: 40px;
 	padding-bottom: 40px;
+	border-right: 3px solid rgb(215, 208, 184);
 }
 
 .current-month-name-calendar {
